--- a/potato.html
+++ b/potato.html
@@ -23,9 +23,12 @@
 	<img src="C:\Users\User\Documents\potato fight\img2.bup.PNG"/>
 	<br>
 	<div id="p">
-	<p style="font-size: 250%;">Potato Fight is a third-person shooter developed by oh my cheese games. The game features anthromorphized potatoes,
- 	who battle each other using butter to "butter" enemies. It focuses on multiplayer battles, in which eight players face off in a struggle for "butter points".
- 	Players can use secondary weapons and special weapons to defeat enemies and can swim through gravy for sneak attacks. It is currently planned for a june 2017 release.</p>
+	<p style="font-size: 250%;">Potato Fight is a third-person shooter developed by Oh My Cheese Games. The game features
+	anthromorphized potatoes,
+ 	who battle each other using butter to "butter" enemies.
+	It focuses on multiplayer battles, in which eight players face off in a struggle for "butter points".
+ 	Players can use secondary weapons and special weapons to defeat enemies and can swim through gravy for sneak attacks. 
+	It is currently planned for a June 2017 release.</p>
 	</div>
 	<a href="" download>
 	<img src="C:\Users\User\Documents\potato fight\usedownload.png">
